fixed text position on mobile for slide 3

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -350,11 +350,11 @@ border-color: $primary transparent; /*colour should be the same as the container
        position: relative;
 
         margin-top: 470px;
-        margin-left: 10%;
+        margin-left: 40%;
         ;
         text-align: left;
         color: white;
-        min-width: 90%;
+        min-width: 80%;
         font-family: 'VT323', cursive;
         font-size: 20pt;
         display: inline-block;
